# dual_hierarchy_tsne

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  vcpkg-configuration.bak  vcpkg.json
include/: aligned.hpp  types.hpp
include/dh/: constants.hpp  types.hpp
include/dh/sne/: params.hpp  sne.hpp
include/dh/sne/components/: buffers.hpp  field.hpp  kl_divergence.hpp  minimization.hpp  similarities.hpp
include/dh/sne/components/hierarchy/: embedding_hierarchy.hpp  field_hierarchy.hpp
include/dh/util/: aligned.hpp  enum.hpp  error.hpp  inclusive_scan.cuh  io.hpp  logger.hpp  timer.hpp
include/dh/util/cu/: error.cuh  interop.cuh  key_sort.cuh  knn.cuh  timer.cuh
include/dh/util/gl/: error.hpp  metric.hpp  program.hpp  timer.hpp  window.hpp
include/dh/vis/: embedding_hierarchy_render_task.hpp  embedding_render_task.hpp  field_hierarchy_render_task.hpp  input_queue.hpp  render_queue.hpp  renderer.hpp  trackball_input_task.hpp
include/dh/vis/components/: embedding_hierarchy_render_task.hpp  embedding_render_task.hpp  esc_input_task.hpp  field_hierarchy_render_task.hpp  trackball_input_task.hpp
include/sne/: params.hpp  sne.hpp  sne_field_2d.hpp  sne_minimization.hpp  sne_params.hpp  sne_similarities.hpp
include/sne/buffers/: sne_field_buffers.hpp  sne_minimization_buffers.hpp  sne_similarities_buffers.hpp
include/sne/components/: buffers.hpp  field.hpp  kl_divergence.hpp  minimization.hpp  similarities.hpp
include/sne/components/hierarchy/: embedding_hierarchy.hpp  field_hierarchy.hpp
include/sne/field/: field_2d.hpp  field_3d.hpp
include/sne/hierarchy/: embedding_hierarchy.hpp  field_hierarchy.hpp
include/sne/hierarchy/buffers/: embedding_hierarchy_buffers.hpp  field_hierarchy_buffers.hpp
include/util/: enum.hpp  error.hpp  inclusive_scan.cuh  io.hpp  key_sort.cuh  logger.hpp  timer.hpp  types.hpp
include/util/cu/: error.cuh  interop.cuh  timer.cuh
include/util/gl/: error.hpp  metric.hpp  program.hpp  timer.hpp  verbatim.hpp  window.hpp
include/vis/: embedding_hierarchy_render_task.hpp  embedding_render_task.hpp  input_queue.hpp  render_queue.hpp  renderer.hpp  trackball_input_task.hpp
resources/cmake/modules/: FindOpenBLAS.cmake
resources/shaders/: foo.glsl
resources/shaders/sne/: dispatch.comp
resources/shaders/sne/embedding_hierarchy/: dispatch.glsl
resources/shaders/sne/embedding_hierarchy/2D/: compEmbeddingSorted.glsl  compLeaves.glsl  compMortonUnsorted.glsl  compNodes.glsl  subdivision.comp
resources/shaders/sne/embedding_hierarchy/3D/: embeddingSorted.comp  leaves.comp  mortonUnsorted.comp  nodes.comp  subdivision.comp
resources/shaders/sne/field/: dispatch.glsl
resources/shaders/sne/field/2D/: compDualHierarchyFieldAccumulate.glsl  compDualHierarchyFieldIterative.glsl  compDualHierarchyFieldLeaf.glsl  compDualHierarchyFieldRest.glsl  compFullCompact.glsl  compFullDrawStencilFrag.glsl  compFullDrawStencilVert.glsl  compSingleHierarchyCompact.glsl  compSingleHierarchyField.glsl  dualHierarchyFieldAccumulate.comp  dualHierarchyFieldIterative.comp  dualHierarchyFieldLeaf.comp  dualHierarchyFieldRest.comp  fullField.comp  queryField.comp  queryField.glsl  singleHierarchyCompact.comp  singleHierarchyField.comp
resources/shaders/sne/field/3D/: dualHierarchyFieldAccumulate.comp  dualHierarchyFieldIterative.comp  dualHierarchyFieldLeaf.comp  dualHierarchyFieldRest.comp  fullCompact.comp  fullCompactGrid.frag  fullCompactGrid.vert  fullField.comp  queryField.comp  singleHierarchyCompact.comp  singleHierarchyField.comp
resources/shaders/sne/field_hierarchy/2D/: compLeaves.comp  compNodes.comp  leaves.comp
resources/shaders/sne/field_hierarchy/3D/: compLeaves.comp  compNodes.comp  leaves.comp  nodes.comp
resources/shaders/sne/kl_divergence/: reduce.comp
resources/shaders/sne/kl_divergence/2D/: KLDSum.comp  qijSum.comp
resources/shaders/sne/kl_divergence/3D/: KLDSum.comp  qijSum.comp
resources/shaders/sne/minimization/2D/: attractive.comp  centerEmbedding.comp  compBounds.glsl  compGradients.glsl  compZ.glsl  updateEmbedding.comp
resources/shaders/sne/minimization/3D/: Z.comp  attractive.comp  bounds.comp  centerEmbedding.comp  compAttractive.glsl  compGradients.glsl  updateEmbedding.glsl
resources/shaders/sne/similarities/: expand.glsl  layout.comp  neighbors.comp  similarities.glsl
resources/shaders/vis/embedding/2D/: embedding.frag  embedding.vert
resources/shaders/vis/embedding/3D/: embedding.frag  embedding.vert
resources/shaders/vis/embedding_hierarchy/2D/: embedding_hierarchy.frag  embedding_hierarchy.vert
resources/shaders/vis/embedding_hierarchy/3D/: embedding_hierarchy.vert
resources/shaders/vis/field_hierarchy/2D/: field_hierarchy.frag  field_hierarchy.vert
resources/shaders/vis/field_hierarchy/3D/: field_hierarchy.frag  field_hierarchy.vert
src/app/: foo.cpp  recording_cmd.cpp  sne_cmd.cpp  sne_example.cpp  sne_test.cpp
src/python/: setup.cfg
src/python/include/: tsne.hpp
src/python/src/: bindings.cpp  tsne.cpp
src/sne/: sne.cpp  sne_field_2d.cpp  sne_minimization.cpp  sne_similarities.cpp
src/sne/components/: kl_divergence.cpp  minimization.cpp  similarities.cpp
src/sne/components/field/: field.cpp  field_comp_dual_hierarchy.cpp  field_comp_full.cpp  field_comp_single_hierarchy.cpp  field_constr_2d.cpp  field_constr_3d.cpp
src/sne/components/hierarchy/: embedding_hierarchy.cpp  field_hierarchy.cpp
src/sne/field/: field_2d.cpp
src/sne/hierarchy/: embedding_hierarchy.cpp  field_hierarchy.cpp
src/util/: inclusive_scan.cu  io.cpp  key_sort.cu  logger.cpp
src/util/cu/: inclusive_scan.cu  interop.cu  key_sort.cu  knn.cu  timer.cu
src/util/gl/: program.cpp  timer.cpp  window.cpp
src/vis/: embedding_hierarchy_render_task.cpp  embedding_render_task.cpp  input_queue.cpp  render_queue.cpp  renderer.cpp  trackball_input_task.cpp
src/vis/components/: embedding_hierarchy_render_task.cpp  embedding_render_task.cpp  esc_input_task.cpp  field_hierarchy_render_task.cpp  trackball_input_task.cpp
